/*
 * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

/*
 * Protos for serializing Tribuo's sparse linear models.
 */
package tribuo.regression.mnb;

option java_multiple_files = true;
option java_package = "org.tribuo.regression.slm.protos";

// Import Tribuo's core protos
import "tribuo-core.proto";

// Import Tribuo's math protos
import "tribuo-math.proto";

/*
SparseLinearModelProto proto
 */
message SparseLinearModelProto {
  tribuo.core.ModelDataProto metadata = 1;
  repeated string dimensions = 2;
  repeated tribuo.math.TensorProto weights = 3;
  tribuo.math.TensorProto feature_means = 4;
  tribuo.math.TensorProto feature_norms = 5;
  bool bias = 6;
  repeated double y_mean = 7;
  repeated double y_norm = 8;
}
